--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.container-wrapper--red {
+    background-color: #f05f40;
+    color: white;
+}
+
 .alert-container .col-12 {
     padding-left: 0;
     padding-right: 0;
@@ -31,11 +36,29 @@ body {
     position: relative;
 }
 
-.quotes-container {}
+.favourites-container table {
+    color: white;
+}
 
-.features-container {}
+/* Page headers */
 
-.favourites-container {}
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2 {
+    margin-top: 0;
+}
+
+.quotes .page-header {
+    margin-bottom: 25px;
+}
+
+.monthly-favourites .page-header {
+    margin-bottom: 25px;
+}
 
 .opaque-overlay {
     position: absolute;
@@ -52,15 +75,26 @@ body {
     width: 75px;
     height: 5px;
     border: 0;
-    background-color: #f05f40;
+    background-color: #444;
 }
 
 .block-divider--orange {
     background-color: #f05f40;
 }
 
+.block-divider--white {
+    background-color: white;
+}
+
 .block-divider--short {
     width: 35px;
+}
+
+/* Content containers */
+
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 
 /* Navbar */
@@ -136,4 +170,32 @@ body {
 .btn--red:active:focus {
     background-color: #df4929;
     border-color: #df4929;
+}
+
+.feature {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.feature i {
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 45px;
+}
+
+.feature .btn {
+    background-color: #f05f40;
+    border-color: #f05f40;
+    border-radius: 15px;
+    min-width: 100px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: white;
+}
+
+.table-hover tbody tr:hover td,
+.table-hover tbody tr:hover th {
+    background-color: #df4929;
+    color: white;
+    font-weight: bold;
 }
